{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 1826,
  "lineage": "5c3b7a41-e4b0-4e33-bdf4-59d575e33e53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0426ea731286b3dd2",
            "arn": "arn:aws:ec2:us-east-1:846338211683:elastic-ip/eipalloc-0426ea731286b3dd2",
            "association_id": "eipassoc-0d13374157e1d0f3a",
            "domain": "vpc",
            "id": "eipalloc-0426ea731286b3dd2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d08ef846fc0f5ee2",
            "private_dns": "ip-10-0-1-46.ec2.internal",
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-54-243-109-150.compute-1.amazonaws.com",
            "public_ip": "54.243.109.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:internet-gateway/igw-04cd594220a907d58",
            "id": "igw-04cd594220a907d58",
            "owner_id": "846338211683",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/6d3d70eb6847a6f8",
            "arn_suffix": "app/application-loadbalancer/6d3d70eb6847a6f8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-loadbalancer-1242662601.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/6d3d70eb6847a6f8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01ea899eedb1ae786"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0337ff6ab0db48f29"
              },
              {
                "subnet_id": "subnet-07359ba21d3084819"
              }
            ],
            "subnets": [
              "subnet-0337ff6ab0db48f29",
              "subnet-07359ba21d3084819"
            ],
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0afabd7b0c05e2eaf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener/app/application-loadbalancer/6d3d70eb6847a6f8/9724436c9fd0ded7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/alb-target-group/3e66961738c053e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener/app/application-loadbalancer/6d3d70eb6847a6f8/9724436c9fd0ded7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/6d3d70eb6847a6f8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener/app/application-loadbalancer/6d3d70eb6847a6f8/fcf33e6dd3bc6467",
            "certificate_arn": "arn:aws:acm:us-east-1:846338211683:certificate/54516165-fb35-49c0-b8f1-2988e2188aec",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/alb-target-group/3e66961738c053e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener/app/application-loadbalancer/6d3d70eb6847a6f8/fcf33e6dd3bc6467",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/6d3d70eb6847a6f8",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/alb-target-group/3e66961738c053e6",
            "arn_suffix": "targetgroup/alb-target-group/3e66961738c053e6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/alb-target-group/3e66961738c053e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/6d3d70eb6847a6f8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0426ea731286b3dd2",
            "association_id": "eipassoc-0d13374157e1d0f3a",
            "connectivity_type": "public",
            "id": "nat-08333f03a3aa1d26b",
            "network_interface_id": "eni-0d08ef846fc0f5ee2",
            "private_ip": "10.0.1.46",
            "public_ip": "54.243.109.150",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0337ff6ab0db48f29",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:route-table/rtb-0ae7f17dd7509c036",
            "id": "rtb-0ae7f17dd7509c036",
            "owner_id": "846338211683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08333f03a3aa1d26b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:route-table/rtb-070446b2c292b5675",
            "id": "rtb-070446b2c292b5675",
            "owner_id": "846338211683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04cd594220a907d58",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f271e0a651305ae2",
            "route_table_id": "rtb-0ae7f17dd7509c036",
            "subnet_id": "subnet-02f6e6ddd5218e21d"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.rtb-internal",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0948de1f43da01704",
            "route_table_id": "rtb-070446b2c292b5675",
            "subnet_id": "subnet-0337ff6ab0db48f29"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rtb-public",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083d4e732c102e36c",
            "route_table_id": "rtb-0ae7f17dd7509c036",
            "subnet_id": "subnet-07359ba21d3084819"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.rtb-internal",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-01ea899eedb1ae786",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ea899eedb1ae786",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16",
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16",
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "application_loadbalancer_sg",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-1a",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0915a66d0c84b69b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0915a66d0c84b69b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240712152649119300000003",
            "name_prefix": "terraform-",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0595ed5121e5d156f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0595ed5121e5d156f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240712152649119600000004",
            "name_prefix": "terraform-",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-02d36f5ca29b12cca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.0.2.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d36f5ca29b12cca",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.0.2.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_rds_cluster",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-1a",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0899aa4e3e8c59dbd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0899aa4e3e8c59dbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "redis_sg",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-1a",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-02f6e6ddd5218e21d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f6e6ddd5218e21d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-07359ba21d3084819",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07359ba21d3084819",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-0337ff6ab0db48f29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0337ff6ab0db48f29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0afabd7b0c05e2eaf"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:vpc/vpc-0afabd7b0c05e2eaf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000aa1a64e7a9d3c7",
            "default_route_table_id": "rtb-089de5e67f4e64264",
            "default_security_group_id": "sg-0326103adc6f8b216",
            "dhcp_options_id": "dopt-045b51ee7bb08e632",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0afabd7b0c05e2eaf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089de5e67f4e64264",
            "owner_id": "846338211683",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            }
          }
        }
      ]
    }
  ]
}